--- a/WordPress/Resources/he.lproj/Localizable.strings
+++ b/WordPress/Resources/he.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-04-01 13:54:08+0000 */
+/* Translation-Revision-Date: 2021-04-30 16:13:08+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: he_IL */
@@ -37,10 +37,10 @@
 "%1$d unseen posts" = "⁦%1$d⁩ פוסטים מוסתרים";
 
 /* translators: 1: From block title, e.g. Paragraph. 2: To block title, e.g. Header. */
-"%1$s transformed to %2$s" = "%1$s transformed to %2$s";
+"%1$s transformed to %2$s" = "⁦%1$s⁩ שונה אל ⁦%2$s⁩";
 
 /* translators: accessibility text. Inform about current value. %1$s: Control label %2$s: setting label (example: width), %3$s: Current value. %4$s: value measurement unit (example: pixels) */
-"%1$s. %2$s is %3$s %4$s." = "%1$s. %2$s is %3$s %4$s.";
+"%1$s. %2$s is %3$s %4$s." = "%1$s. ⁦%2$s⁩ הוא ⁦%3$s⁩ %4$s.";
 
 /* Post Stats label for week date range. Ex: Mar 25 - Mar 31, 2019 */
 "%@ - %@, %@" = "%1$@ - %2$@, %3$@";
@@ -217,10 +217,10 @@
 "(no title)" = "(חסרה כותרת)";
 
 /* Example Comment notification displayed in the prologue carousel of the app. Username should be marked with * characters and will be displayed as bold text. */
-"*Johann Brandt* responded to your post" = "*Johann Brandt* responded to your post";
+"*Johann Brandt* responded to your post" = "*ישראל ישראלי* הגיב לפוסט שלך";
 
 /* Example Like notification displayed in the prologue carousel of the app. Username should be marked with * characters and will be displayed as bold text. */
-"*Madison Ruiz* liked your post" = "*Madison Ruiz* liked your post";
+"*Madison Ruiz* liked your post" = "*ישראלה ישראלה* סימנה לייק בפוסט שלך";
 
 /* Menus button text for adding a new menu to a site. */
 "+ Add new menu" = "+ הוספת תפריט חדש";
@@ -325,7 +325,7 @@
 "About" = "אודות";
 
 /* Link to About screen for Jetpack for iOS */
-"About Jetpack for iOS" = "About Jetpack for iOS";
+"About Jetpack for iOS" = "מידע לגבי Jetpack עבור iOS";
 
 /* My Profile 'About me' label */
 "About Me" = "אודותיי";
@@ -759,7 +759,7 @@
 "Are you sure you want to update?" = "האם ברצונך לעדכן?";
 
 /* An example tag used in the login prologue screens. */
-"Art" = "Art";
+"Art" = "אומנות";
 
 /* Message shown to users who have an old publicize connection to a facebook profile. */
 "As of August 1, 2018, Facebook no longer allows direct sharing of posts to Facebook Profiles. Connections to Facebook Pages remain unchanged." = "החל מ-1 באוגוסט 2018, פלטפורמת פייסבוק לא תאפשר עוד שיתוף ישיר של פוסטים לפרופילים בפייסבוק. החשבונות המקושרים לדפים בפייסבוק לא ישתנו.";
@@ -1088,7 +1088,7 @@
 "Cancel media uploads" = "ביטול טעינת מדיה";
 
 /* No comment provided by engineer. */
-"Cancel search" = "Cancel search";
+"Cancel search" = "לבטל חיפוש";
 
 /* Share extension dialog dismiss button label - displayed when user is missing a login token. */
 "Cancel sharing" = "ביטול השיתוף";
@@ -1230,7 +1230,7 @@
 "Choose a domain" = "לבחור דומיין";
 
 /* OK Button title shown in alert informing users about the Reader Save for Later feature. */
-"Choose a new app icon" = "Choose a new app icon";
+"Choose a new app icon" = "לבחור סמל חדש לאפליקציה";
 
 /* Title of a Quick Start Tour */
 "Choose a theme" = "בחירת ערכת עיצוב";
@@ -1308,7 +1308,7 @@
 "Clear all old activity logs?" = "האם למחוק את כל יומני הפעילות הישנים?";
 
 /* No comment provided by engineer. */
-"Clear search" = "Clear search";
+"Clear search" = "לנקות את החיפוש";
 
 /* Title of a button. */
 "Clear search history" = "ניקוי היסטוריית חיפוש";
@@ -1359,7 +1359,7 @@
 "Collect information" = "איסוף מידע";
 
 /* Title displayed for selection of custom app icons that have colorful backgrounds. */
-"Colorful backgrounds" = "Colorful backgrounds";
+"Colorful backgrounds" = "רקעים צבעוניים";
 
 /* First story intro item description */
 "Combine photos, videos, and text to create engaging and tappable story posts that your visitors will love." = "אפשר לשלב תמונות, סרטוני וידאו וטקסטים כדי ליצור פוסטים מעניינים של סטורי שיוצגו בהקשה ולהרשים את הקוראים שלך.";
@@ -1587,7 +1587,7 @@
 "Continuing with Apple" = "להמשיך עם Apple";
 
 /* An example tag used in the login prologue screens. */
-"Cooking" = "Cooking";
+"Cooking" = "בישול";
 
 /* No comment provided by engineer. */
 "Copied block" = "הבלוק הועתק";
@@ -1950,7 +1950,7 @@
 "Deny" = "דחייה";
 
 /* No comment provided by engineer. */
-"Describe the purpose of the image. Leave empty if the image is purely decorative. " = "Describe the purpose of the image. Leave empty if the image is purely decorative. ";
+"Describe the purpose of the image. Leave empty if the image is purely decorative. " = "לתאר את מטרת התמונה. יש להשאיר את השדה ריק אם התמונה נוספה לצורך דקורטיבי בלבד. ";
 
 /* Label for the description for a media asset (image / video)
    Section header for tag name in Tag Details View.
@@ -2553,13 +2553,13 @@
 "Failed Media Export" = "ייצוא המדיה נכשל";
 
 /* No comment provided by engineer. */
-"Failed to insert audio file." = "Failed to insert audio file.";
+"Failed to insert audio file." = "ההוספה של קובץ האודיו נכשלה.";
 
 /* No comment provided by engineer. */
 "Failed to insert audio file. Please tap for options." = "נכשלה ההוספה של קובץ האודיו. יש להקיש לאפשרויות.";
 
 /* No comment provided by engineer. */
-"Failed to insert media." = "Failed to insert media.";
+"Failed to insert media." = "ההוספה של המדיה נכשלה.";
 
 /* Error message to show to use when media insertion on a post fails */
 "Failed to insert media.\n Please tap for options." = "שילוב פירטי המדיה נכשל.\n יש להקיש לאפשרויות.";
@@ -2754,7 +2754,7 @@
 "Follows the tag." = "עוקב אחר התגית.";
 
 /* An example tag used in the login prologue screens. */
-"Football" = "Football";
+"Football" = "פוטבול";
 
 /* Register Domain - Domain contact information section header description */
 "For your convenience, we have pre-filled your WordPress.com contact information. Please review to be sure it’s the correct information you want to use for this domain." = "לנוחותך, מילאנו מראש את הפרטים ליצירת קשר עמך ב-WordPress.com. יש לבדוק את הפרטים ולוודא שהמידע נכון לדומיין שבו ברצונך להשתמש.";
@@ -2793,7 +2793,7 @@
 "Gallery caption. %s" = "כיתוב לגלריה. %s";
 
 /* An example tag used in the login prologue screens. */
-"Gardening" = "Gardening";
+"Gardening" = "גינון";
 
 /* Add New Stats Card category title
    Title for the general section in site settings screen */
@@ -3360,7 +3360,7 @@
 "Left" = "שמאל";
 
 /* Title displayed for selection of custom app icons that may be removed in a future release of the app. */
-"Legacy Icons" = "Legacy Icons";
+"Legacy Icons" = "סמלים ישנים";
 
 /* Heading for instructions on Start Over settings page */
 "Let Us Help" = "תנו לנו לעזור";
@@ -3372,7 +3372,7 @@
 "Light" = "צבעים בהירים";
 
 /* Title displayed for selection of custom app icons that have white backgrounds. */
-"Light backgrounds" = "Light backgrounds";
+"Light backgrounds" = "צבעים בהירים לרקע";
 
 /* Like (verb)
    Like a post.
@@ -3836,7 +3836,7 @@
 "Moves the comment to the Trash." = "העברת התגובות לפח.";
 
 /* An example tag used in the login prologue screens. */
-"Music" = "Music";
+"Music" = "מוזיקה";
 
 /* Link to My Profile section
    My Profile view title */
@@ -3897,7 +3897,7 @@
 "New Blocklist Word" = "מילה חדשה לרשימת החסימות";
 
 /* Title of alert informing users about the Reader Save for Later feature. */
-"New Custom App Icons" = "New Custom App Icons";
+"New Custom App Icons" = "סמלים מותאמים חדשים באפליקציה";
 
 /* IP Address or Range Insertion Title */
 "New IP or IP Range" = "כתובת IP או טווח IP חדשים";
@@ -4678,7 +4678,7 @@
 "Plugins" = "תוספים";
 
 /* An example tag used in the login prologue screens. */
-"Politics" = "Politics";
+"Politics" = "פוליטיקה";
 
 /* Header of section in Plugin Directory showing popular plugins
    Screen title, where users can see the most popular plugins */
@@ -4874,7 +4874,7 @@
 "Problem displaying block" = "בעיה בהצגת הבלוק";
 
 /* Error message title informing the user that reader content could not be loaded. */
-"Problem loading content" = "Problem loading content";
+"Problem loading content" = "בעיה בטעינת התוכן";
 
 /* Error message title informing the user that a search for sites in the Reader could not be loaded. */
 "Problem loading sites" = "בעיה בטעינת האתר";
@@ -5320,7 +5320,7 @@
 "Right" = "ימין";
 
 /* Example Reader feed title */
-"Rock 'n Roll Weekly" = "Rock 'n Roll Weekly";
+"Rock 'n Roll Weekly" = "חדשות הרוקנרול";
 
 /* Title. Indicates the user role an invite link is for.
    User Roles Title
@@ -5455,10 +5455,10 @@
 "Search WordPress\nfor a site or post" = "לחפש ב-WordPress \nאתר או פוסט";
 
 /* No comment provided by engineer. */
-"Search block" = "Search block";
+"Search block" = "בלוק החיפוש";
 
 /* No comment provided by engineer. */
-"Search blocks" = "Search blocks";
+"Search blocks" = "בלוקים של חיפוש";
 
 /* No comment provided by engineer. */
 "Search or type URL" = "לחפש או להקליד כתובת URL";
@@ -5825,7 +5825,7 @@
 "Siri Reset Prompt" = "ניקוי של ההצעות לקיצורי הדרך של Siri";
 
 /* Header for a single site, shown in Notification user profile. */
-"Site" = "Site";
+"Site" = "אתר";
 
 /* Accessibility label for site icon button */
 "Site Icon" = "סמל אתר";
@@ -5993,7 +5993,7 @@
 "Sorry, you may not use that site address." = "לא ניתן להשתמש בכתובת את זו.";
 
 /* A short error message letting the user know the requested reader content could not be loaded. */
-"Sorry. The content could not be loaded." = "Sorry. The content could not be loaded.";
+"Sorry. The content could not be loaded." = "מצטערים. לא ניתן היה לטעון את התוכן הזה.";
 
 /* An error message shown if a third-party social service does not specify any accounts that an be used with publicize sharing. */
 "Sorry. The social service did not tell us which account could be used for sharing." = "מצטערים. הרשת החברתית לא ציינה באיזה חשבון עלינו להשתמש לשיתוף.";
@@ -6786,10 +6786,10 @@
 "Traffic" = "תעבורה";
 
 /* translators: %s: block title e.g: \"Paragraph\". */
-"Transform %s to" = "Transform %s to";
+"Transform %s to" = "לשנות את %s אל";
 
 /* No comment provided by engineer. */
-"Transform block…" = "Transform block…";
+"Transform block…" = "לשנות בלוק...";
 
 /* No comment provided by engineer. */
 "Translate" = "לתרגם";
@@ -7651,7 +7651,7 @@
 "Web Display Settings" = "הגדרות תצוגת אינטרנט";
 
 /* Example Reader feed title */
-"Web News" = "Web News";
+"Web News" = "חדשות באינטרנט";
 
 /* Blog Writing Settings: Weeks starts on */
 "Week starts on" = "היום הראשון בשבוע";
@@ -7703,7 +7703,7 @@
 "We’ve made some changes to your checklist" = "ביצענו מספר שינויים לרשימת המשימות שלך";
 
 /* Body text of alert informing users about the Reader Save for Later feature. */
-"We’ve updated our custom app icons with a fresh new look. There are 10 new styles to choose from, or you can simply keep your existing icon if you prefer." = "We’ve updated our custom app icons with a fresh new look. There are 10 new styles to choose from, or you can simply keep your existing icon if you prefer.";
+"We’ve updated our custom app icons with a fresh new look. There are 10 new styles to choose from, or you can simply keep your existing icon if you prefer." = "עדכנו את הסמלים המותאמים באפליקציה עם סגנון חדש ומרענן. יש עשרה סגנונות חדשים שמהם ניתן לבחור ואפשר גם להשאיר את הסמלים שקיימים אצלך, לבחירתך.";
 
 /* This is the string we display when prompting the user to review the app */
 "What do you think about WordPress?" = "מה דעתך על וורדפרס?";
@@ -7712,7 +7712,7 @@
 "What do you want to do with this file: upload it and add a link to the file into your post, or add the contents of the file directly to the post?" = "מה ברצונך לעשות עם הקובץ: האם להעלות אותו ולהוסיף קישור לקובץ בפוסט שלך או להוסיף את התוכן של הקובץ ישירות לפוסט?";
 
 /* No comment provided by engineer. */
-"What is alt text?" = "What is alt text?";
+"What is alt text?" = "מה זה טקסט חלופי?";
 
 /* Title for the problem section in the Threat Details */
 "What was the problem?" = "מתי הבעיה התרחשה?";
@@ -7996,7 +7996,7 @@
 "You need to verify your account before you can publish a post.\nDon’t worry, your post is safe and will be saved as a draft." = "עליך לאמת את החשבון שלך לפני שיהיה באפשרותך לפרסם פוסט.\nאל דאגה, הפוסט שלך בטוח ויישמר כטיוטה.";
 
 /* Example Likes notification displayed in the prologue carousel of the app. Number of likes should marked with * characters and will be displayed as bold text. */
-"You received *50 likes* on your site today" = "You received *50 likes* on your site today";
+"You received *50 likes* on your site today" = "קיבלת ⁦*50 likes* on your site today⁩";
 
 /* Message displayed in popup when user has the option to load unsaved changes. 
  is a placeholder for a new line, and the two %@ are placeholders for the date of last save on this device, and date of last autosave on another device, respectively. */
@@ -8150,7 +8150,7 @@
 "doesn’t it feel good to cross things off a list?" = "שמחים שהשלמת את המטרה שהצבת לעצמך!";
 
 /* No comment provided by engineer. */
-"double-tap to change unit" = "double-tap to change unit";
+"double-tap to change unit" = "יש להקיש פעמיים כדי לשנות את היחידה";
 
 /* Register Domain - Address information field Number placeholder */
 "eg. 1122334455" = "לדוגמה 1122334455";
