--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -5,6 +5,7 @@
 
 17.3
 -----
+* [**] Added transform block capability [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3321]
 * [**] Fix issue where deleting a post and selecting undo would sometimes convert the content to the classic editor. [#16342]
 * [**] Fix issue where restoring a post left the restored post in the published list even though it has been converted to a draft. [#16358]
 * [**] Fix issue where trashing a post converted it to Classic content. [#16367]
